cilium-cli/connectivity/builder/manifests/client-with-service-account-egress-to-echo-port-range.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: client-with-service-account-egress-to-echo-port-range
spec:
  description: "Allow client port range with service account endpoint selector to echo service"
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: client
  egress:
  - toPorts:
    - ports:
      - port: "4096"
        endPort: 8191
        protocol: TCP
    toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cilium-test
        kind: echo
      matchExpressions:
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
